# ChangeLog for dev-java/relaxng-datatype
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/relaxng-datatype/ChangeLog,v 1.7 2006/07/27 20:29:25 nelchael Exp $

*relaxng-datatype-1.0-r1 (27 Jul 2006)

  27 Jul 2006; Krzysiek Pawlik <nelchael@gentoo.org>
  +relaxng-datatype-1.0-r1.ebuild:
  Migrated to Generation 2.

  11 Mar 2006; Michael Hanselmann <hansmi@gentoo.org>
  relaxng-datatype-1.0.ebuild:
  Stable on ppc.

  23 Jan 2006; Joshua Nichols <nichoj@gentoo.org>
  relaxng-datatype-1.0.ebuild:
  Marked stable on amd64.

  26 Sep 2005; Thomas Matthijs <axxo@gentoo.org>
  relaxng-datatype-1.0.ebuild:
  keyword x86

  16 Sep 2005; Gustavo Felisberto <humpback@gentoo.org>;
  relaxng-datatype-1.0.ebuild:
  Keyword ~amd64 bug #105520

  01 Jul 2005; David Holm <dholm@gentoo.org> relaxng-datatype-1.0.ebuild:
  Added to ~ppc.

*relaxng-datatype-1.0 (29 Jun 2005)

  29 Jun 2005; Thomas Matthijs <axxo@gentoo.org>
  +files/relaxng-datatype-1.0-build_xml.patch, +metadata.xml,
  +relaxng-datatype-1.0.ebuild:
  new packages, dep of dom4j, ebuild contributed by Josh Nichols
  <nichoj@alum.rpi.edu>
