@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/relaxng-datatype/relaxng-datatype-1.0-r1.ebuild,v 1.1 2006/07/27 20:29:25 nelchael Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/relaxng-datatype/relaxng-datatype-1.0-r1.ebuild,v 1.2 2006/09/14 03:38:13 nichoj Exp $
 
 inherit java-pkg-2 java-ant-2 eutils
 
@@ -12,7 +12,7 @@ SRC_URI="mirror://sourceforge/relaxng/${MY_P}.zip"
 
 LICENSE="as-is"
 SLOT="0"
-KEYWORDS="~amd64 ~ppc ~x86"
+KEYWORDS="~amd64 ~ppc ~ppc64 ~x86"
 IUSE="doc source"
 
 DEPEND=">=virtual/jdk-1.4
