@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/xsdlib
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/xsdlib/ChangeLog,v 1.9 2006/07/24 09:14:33 nelchael Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/xsdlib/ChangeLog,v 1.10 2006/09/14 03:40:04 nichoj Exp $
+
+  14 Sep 2006; Joshua Nichols <nichoj@gentoo.org> xsdlib-20050627-r1.ebuild:
+  Added ~ppc64.
 
   24 Jul 2006; Krzysiek Pawlik <nelchael@gentoo.org>
   +files/build-20050627-r1.xml:
