@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/relaxng-datatype
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/relaxng-datatype/ChangeLog,v 1.7 2006/07/27 20:29:25 nelchael Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/relaxng-datatype/ChangeLog,v 1.8 2006/09/14 03:38:13 nichoj Exp $
+
+  14 Sep 2006; Joshua Nichols <nichoj@gentoo.org>
+  relaxng-datatype-1.0-r1.ebuild:
+  Added ~ppc64.
 
 *relaxng-datatype-1.0-r1 (27 Jul 2006)
 
